--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "test-all": "ng test --browsers Chrome,Firefox,Safari,Opera",
+    "test-custom": "ng test --watch=false --browsers FirefoxSemCabeca",
+    "test-ci": "ng test --watch=false --reporters junit --browsers ChromeHeadless",
+    "test-coverage": "ng test --watch=false --sourceMap=true --codeCoverage=true --browsers ChromeHeadless",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
@@ -39,8 +43,13 @@
     "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
+    "karma-edge-launcher": "^0.4.2",
+    "karma-firefox-launcher": "^1.3.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-junit-reporter": "^2.0.1",
+    "karma-opera-launcher": "^1.0.0",
+    "karma-safari-launcher": "^1.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
